--- a/clock.html
+++ b/clock.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Retro Clock</title>
-  <script src="/bower_components/jquery/jquery.js"></script>
+  <script src="/bower_components/zepto/zepto.min.js"></script>
   <script src="js/clock.js"></script>
   <link rel="stylesheet" href="css/clock.css" type="text/css">
 </head>
