added back face

--- a/clock.html
+++ b/clock.html
@@ -10,6 +10,9 @@
 <body>
   <section class="clock">
     <div class="face">
+      <div class="face-back">
+        <div class="digit-top hours-tens-back">0</div>
+      </div>
       <div class="face-top">
         <div class="digit-top hours-tens">0</div>
       </div>
@@ -19,6 +22,9 @@
     </div>
 
   <div class="face">
+    <div class="face-back">
+      <div class="digit-top hours-ones-back">0</div>
+    </div>
     <div class="face-top">
       <div class="digit-top hours-ones">0</div>
     </div>
@@ -30,6 +36,9 @@
   <div class="face-seperator"> </div>
 
   <div class="face">
+    <div class="face-back">
+      <div class="digit-top minutes-tens-back">0</div>
+    </div>
     <div class="face-top">
       <div class="digit-top minutes-tens">0</div>
     </div>
@@ -39,6 +48,9 @@
   </div>
 
   <div class="face">
+    <div class="face-back">
+      <div class="digit-top minutes-ones-back">0</div>
+    </div>
     <div class="face-top">
       <div class="digit-top minutes-ones">0</div>
     </div>
